Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             <h1>Título do site</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
+            <h2>Naruto</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo vitae amet neque commodi magni dolorem ullam assumenda quo ab blanditiis modi dolore adipisci voluptatum doloremque esse mollitia, veritatis possimus inventore?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
+            <h2>Sasuke</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur ullam aspernatur impedit, inventore nisi omnis quasi consectetur iste voluptatum quia. Cum voluptates temporibus eligendi voluptate asperiores soluta reprehenderit similique?</p>
         </article>
     </main>
