--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <link rel="stylesheet" href="estilos/style.css">
         </header>
         <article>
-            <h2>Naruto</h2>
+            <h2>HTML e CSS</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo vitae amet neque commodi magni dolorem ullam assumenda quo ab blanditiis modi dolore adipisci voluptatum doloremque esse mollitia, veritatis possimus inventore?</p>
         </article>
         <article>
-            <h2>Sasuke</h2>
+            <h2>JavaScript</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium tenetur ullam aspernatur impedit, inventore nisi omnis quasi consectetur iste voluptatum quia. Cum voluptates temporibus eligendi voluptate asperiores soluta reprehenderit similique?</p>
         </article>
     </main>
